[workspace]
members = [
    "ac97d",
    "acpid",
    "ahcid",
    "bgad",
    "block-io-wrapper",
    "common",
    "fbcond",
    "ided",
    "ihdad",
    "nvmed",
    "lived", # TODO: not really a driver...
    "pcid",
    "pcspkrd",
    "ps2d",
    "sb16d",
    "vboxd",
    "vesad",
    "xhcid",
    "usbctl",
    "usbhidd",
    "usbscsid",
    "inputd",

    "virtio-blkd",
    "virtio-gpud",
    "virtio-core",

    "net/alxd",
    "net/driver-network",
    "net/e1000d",
    "net/ixgbed",
    "net/rtl8139d",
    "net/rtl8168d",
    "net/virtio-netd",

    "bcm2835-sdhcid",
]

[profile.release]
lto = "fat"

[patch.crates-io]
mio = { git = "https://gitlab.redox-os.org/redox-os/mio.git", branch = "redox-unix" }
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git", version = "0.3.44" }
redox-daemon = { git = "https://gitlab.redox-os.org/redox-os/redox-daemon.git" }
