[workspace]
members = [
    "acpid",
    "common",
    "pcid",
    "ps2d",
    "vboxd",
    "xhcid",
    "usbctl",
    "usbhidd",
    "inputd",
    "virtio-core",

    "audio/ac97d",
    "audio/ihdad",
    "audio/pcspkrd",
    "audio/sb16d",

    "graphics/bgad",
    "graphics/fbcond",
    "graphics/vesad",
    "graphics/virtio-gpud",

    "net/alxd",
    "net/driver-network",
    "net/e1000d",
    "net/ixgbed",
    "net/rtl8139d",
    "net/rtl8168d",
    "net/virtio-netd",

    "storage/ahcid",
    "storage/bcm2835-sdhcid",
    "storage/driver-block",
    "storage/ided",
    "storage/lived", # TODO: not really a driver...
    "storage/nvmed",
    "storage/usbscsid",
    "storage/virtio-blkd",
]

[profile.release]
lto = "fat"

[patch.crates-io]
mio = { git = "https://gitlab.redox-os.org/redox-os/mio.git", branch = "redox-unix" }
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git", version = "0.3.44" }
redox-daemon = { git = "https://gitlab.redox-os.org/redox-os/redox-daemon.git" }
