[workspace]
members = [
    "common",
    "executor",

    "acpid",
    "hwd",
    "pcid",
    "pcid-spawner",
    "rtcd",
    "vboxd",
    "inputd",
    "virtio-core",

    "usb/xhcid",
    "usb/usbctl",
    "usb/usbhubd",
    "usb/udc/driver-udc",
    "usb/udc/dwc3",
    "usb/udc/dwc3-pci",
    "usb/gadget/driver-gadget",

    "audio/ac97d",
    "audio/ihdad",
    "audio/sb16d",

    "graphics/bgad",
    "graphics/console-draw",
    "graphics/fbbootlogd",
    "graphics/driver-graphics",
    "graphics/fbcond",
    "graphics/graphics-ipc",
    "graphics/vesad",
    "graphics/virtio-gpud",

    "input/ps2d",
    "input/usbhidd",

    "net/alxd",
    "net/driver-network",
    "net/e1000d",
    "net/ixgbed",
    "net/rtl8139d",
    "net/rtl8168d",
    "net/virtio-netd",

    "storage/ahcid",
    "storage/bcm2835-sdhcid",
    "storage/driver-block",
    "storage/ided",
    "storage/lived",          # TODO: not really a driver...
    "storage/nvmed",
    "storage/usbscsid",
    "storage/virtio-blkd",

    "usb/xhcid",
    "usb/usbctl",
    "usb/usbhubd",
]

[profile.release]
lto = "fat"

[patch.crates-io]
mio = { git = "https://gitlab.redox-os.org/redox-os/mio.git", branch = "redox-unix" }
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git", version = "0.3.44" }
redox-daemon = { git = "https://gitlab.redox-os.org/redox-os/redox-daemon.git" }
