[package]
name = "acpid"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aml = { git = "https://github.com/rw-vanc/acpi.git", branch = "cumulative" }
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.11.1"
plain = "0.2.3"
redox-daemon = "0.1"
redox-log = "0.1.1"
redox_syscall = "0.5"
rustc-hash = "1.1.0"
thiserror = "1"
serde_json = "1.0.94"

amlserde = { path = "../amlserde" }
common = { path = "../common" }
libredox = "0.1.3"
