[package]
name = "acpid"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = { git = "https://github.com/jackpot51/acpi.git" }
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
plain = "0.2.3"
redox-daemon = "0.1"
redox_syscall = "0.5.6"
redox_event = "0.4.1"
rustc-hash = "1.1.0"
thiserror = "1"
ron = "0.8.1"

amlserde = { path = "../amlserde" }
common = { path = "../common" }
libredox = "0.1.3"
redox-scheme = "0.6.2"
arrayvec = "0.7.6"
serde = { version = "1.0.228", features = ["derive"] }
