[package]
name = "ahcid"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1.2"
byteorder = "1.2"
log = "0.4"
partitionlib = { git = "https://gitlab.redox-os.org/redox-os/partitionlib.git" }
redox-daemon = "0.1"
redox-log = "0.1"
redox_syscall = { git = "https://gitlab.redox-os.org/4lDO2/syscall.git", branch = "userspace_fexec" }
block-io-wrapper = { path = "../block-io-wrapper" }
