[package]
name = "ahcid"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1.2"
byteorder = "1.2"
log = "0.4"
partitionlib = { git = "https://gitlab.redox-os.org/redox-os/partitionlib.git" }
redox-daemon = "0.1"
redox-log = "0.1"
redox_syscall = "0.4"

block-io-wrapper = { path = "../block-io-wrapper" }
common = { path = "../common" }
