[package]
name = "alxd"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1"
netutils = { git = "https://gitlab.redox-os.org/redox-os/netutils.git" }
redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = "0.4"
redox-daemon = "0.1"

common = { path = "../common" }
