[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libredox = "0.1.3"
log = "0.4"
redox_syscall = { version = "0.5.10", features = ["std"] }
redox-log = "0.1.2"
