[package]
name = "ided"
version = "0.1.0"
edition = "2018"

[dependencies]
block-io-wrapper = { path = "../block-io-wrapper" }
log = "0.4"
partitionlib = { git = "https://gitlab.redox-os.org/redox-os/partitionlib.git" }
pcid = { path = "../pcid" }
redox-daemon = "0.1"
redox-log = "0.1"
redox_syscall = "0.3"
