[package]
name = "inputd"
version = "0.1.0"
edition = "2021"
authors = ["Anhad Singh <andypython@protonmail.com>"]

[dependencies]
anyhow = "1.0.71"
log = "0.4.19"
redox-daemon = "0.1.2"
redox_syscall = { version = "0.5", features = ["std"] }
orbclient = "0.3.27"
libredox = "0.1.3"

common = { path = "../common" }
redox-scheme = "0.6.2"
