[package]
name = "ixgbed"
version = "1.0.0"
edition = "2021"

[dependencies]
bitflags = "1.0"
netutils = { git = "https://gitlab.redox-os.org/redox-os/netutils.git" }
redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = "0.4"
redox-daemon = "0.1"

common = { path = "../common" }
driver-network = { path = "../driver-network" }
pcid = { path = "../pcid" }
