[package]
name = "nvmed"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = "0.5"
bitflags = "0.7"
crossbeam-channel = "0.4"
log = "0.4"
redox-log = { git = "https://gitlab.redox-os.org/redox-os/redox-log.git", tag = "v0.1.0" }
redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall.git" }
partitionlib = { git = "https://gitlab.redox-os.org/redox-os/partitionlib.git" }
smallvec = "1"
block-io-wrapper = { path = "../block-io-wrapper" }

pcid = { path = "../pcid" }
