[package]
name = "pcid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pcid"
path = "src/main.rs"

[lib]
name = "pcid_interface"
path = "src/lib.rs"

[dependencies]
bincode = "1.2"
bitflags = "1"
bit_field = "0.10"
fdt = "0.1.5"
libc = "0.2"
log = "0.4"
paw = "1.0"
pci_types = "0.10"
plain = "0.2"
redox-daemon = "0.1"
redox_syscall = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false, features = [ "paw" ] }
thiserror = "1"
toml = "0.5"

common = { path = "../common" }
libredox = "0.1.3"
