[package]
name = "pcid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pcid"
path = "src/main.rs"

[lib]
name = "pcid_interface"
path = "src/lib.rs"

[dependencies]
bincode = "1.2"
fdt = "0.1.5"
libc = "0.2"
log = "0.4"
pci_types = "0.10"
plain = "0.2"
redox-daemon = "0.1"
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
thiserror = "1"
toml = "0.5"

common = { path = "../common" }
libredox = "0.1.3"
