[package]
name = "pcid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pcid"
path = "src/main.rs"

[lib]
name = "pcid_interface"
path = "src/lib.rs"

[dependencies]
bincode = "1.2"
fdt = "0.1.5"
libc = "0.2"
log = "0.4"
pci_types = "0.10"
pico-args = { version = "0.5", features = ["combined-flags"] }
plain = "0.2"
redox-daemon = "0.1"
redox-scheme = "0.6.2"
redox_syscall = "0.5.9"
serde = { version = "1", features = ["derive"] }

common = { path = "../common" }
libredox = "0.1.3"
