[package]
name = "rtl8139d"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1"
log = "0.4"
netutils = { git = "https://gitlab.redox-os.org/redox-os/netutils.git", branch = "redox-unix" }
redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = "0.3"
redox-daemon = "0.1"
redox-log = "0.1"

pcid = { path = "../pcid" }
