[package]
name = "rtl8168d"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "0.7"
netutils = { git = "https://gitlab.redox-os.org/redox-os/netutils.git", branch = "redox-unix" }
# TODO: Latest crates
redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git", rev = "c31e3d3d" }
redox_syscall = "0.1"
