[package]
name = "usbhidd"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
orbclient = "0.3.27"
ux = "0.1"
xhcid = { path = "../xhcid" }
