[package]
name = "usbscsid"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11" # Only for debugging
plain = "0.2"
thiserror = "1"
xhcid = { path = "../xhcid" }
