[package]
name = "vesad"
version = "0.1.0"
edition = "2018"

[dependencies]
orbclient = "0.3.27"
ransid = "0.4"
rusttype = { version = "0.2", optional = true }
redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall", rev = "4115e0f43547449ce56f7d7749732813e9505955" }

[features]
default = []
