[package]
name = "virtio-netd"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
static_assertions = "1.1.0"
futures = { version = "0.3.28", features = ["executor"] }

virtio-core = { path = "../virtio-core" }
pcid = { path = "../pcid" }
common = { path = "../common" }

redox-daemon = "0.1"
redox_syscall = "0.3"
netutils = { git = "https://gitlab.redox-os.org/redox-os/netutils.git" }
