[package]
name = "virtiod"
version = "0.1.0"
edition = "2021"
authors = ["Anhad Singh <andypython@protonmail.com>"]

[dependencies]
static_assertions = "1.1.0"
bitflags = "2.3.2"
anyhow = "1.0.71"
log = "0.4"
thiserror = "1.0.40"

redox-daemon = "0.1"
redox-log = "0.1"
redox_syscall = "0.3"

pcid = { path = "../pcid" }
