[package]
name = "xhcid"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "xhcid"
path = "src/main.rs"

[lib]
name = "xhcid_interface"
path = "src/lib.rs"

[dependencies]
bitflags = "1"
plain = "0.2"
lazy_static = "1.4"
spin = "0.4"
redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = { git = "https://gitlab.redox-os.org/4lDO2/syscall.git", branch = "dma-slices" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
toml = "0.5"
