[package]
name = "sb16d"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1"
common = { path = "../../common" }
libredox = "0.1.3"
log = "0.4"
redox-daemon = "0.1"
redox-log = "0.1"
redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = "0.4"
spin = "0.9"
