[package]
name = "driver-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
redox-scheme = { git = "https://gitlab.redox-os.org/redox-os/redox-scheme.git" }
redox_syscall = { version = "0.5", features = ["std"] }
libredox = "0.1.3"

common = { path = "../../common" }
graphics-ipc = { path = "../graphics-ipc" }
inputd = { path = "../../inputd" }
