[package]
name = "fbbootlogd"
version = "0.1.0"
edition = "2021"

[dependencies]
orbclient = "0.3.27"
ransid = "0.4"
redox_event = "0.4"
redox_syscall = "0.5"
redox-daemon = "0.1"
redox-scheme = { git = "https://gitlab.redox-os.org/redox-os/redox-scheme.git" }

console-draw = { path = "../console-draw" }
inputd = { path = "../../inputd" }
libredox = "0.1.3"

[features]
default = []
