[package]
name = "e1000d"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1"
redox-daemon = "0.1"
redox_event = { git = "https://gitlab.redox-os.org/redox-os/event.git" }
redox_syscall = "0.5"

common = { path = "../../common" }
driver-network = { path = "../driver-network" }
pcid = { path = "../../pcid" }
libredox = "0.1.3"
