[package]
name = "e1000d"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "2"
log = "0.4"
redox-daemon = "0.1.2"
libredox = "0.1.3"
redox_event = "0.4.1"
redox_syscall = "0.5"

common = { path = "../../common" }
driver-network = { path = "../driver-network" }
pcid = { path = "../../pcid" }
